# TurnPlayerTauri

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  FileList.tsx  HPlayer.tsx  Player.tsx  RadioDrawer.tsx  RadioInput.tsx  RenderInputAndButton.tsx  WebAudio.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
