[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-alpha"
serde_json = "1.0"
serde = "1.0.196"
chrono = { version = "0.4.33", features = ["serde"] }
thiserror = "1.0.56"
once_cell = "1.19.0"
regex = "1.10.3"
tauri-plugin-fs = "2.0.0-alpha.7"
tauri-plugin-dialog = "2.0.0-alpha.7"
tauri-plugin-global-shortcut = "2.0.0-alpha.6"
tauri-plugin-http = "2.0.0-alpha.9"
tauri-plugin-os = "2.0.0-alpha.6"
tauri-plugin-store = "2.0.0-alpha.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-alpha.6"
